--- a/src/index.css
+++ b/src/index.css
@@ -31,8 +31,8 @@ Variables
   --clr-grey-9: hsl(212, 33%, 89%);
   --clr-grey-10: hsl(210, 36%, 96%);
   --clr-white: #fff;
-  --clr-purple: #4b145b;
-  --clr-red-special: #b4345c;
+  --clr-ocean: #07575B;
+  --clr-deep-aqua: #003b46;
   --clr-grey-special: #eae6eb;
   --clr-red-dark: hsl(360, 67%, 44%);
   --clr-red-light: hsl(360, 71%, 66%);
@@ -63,7 +63,7 @@ Global Styles
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background: var(--clr-purple);
+  background: var(--clr-ocean);
   color: var(--clr-grey-1);
   line-height: 1.5;
   font-size: 0.875rem;
@@ -205,7 +205,7 @@ main {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  color: var(--clr-red-special);
+  color: var(--clr-deep-aqua);
   cursor: pointer;
   margin-left: 1rem;
   align-self: center;
